# tango-hs

./: .gitignore  Changelog  LICENSE  README  README.org  colli.json  flake.nix  hie.yaml  hs-tango.cabal  run-chef.sh  tango-hs.cabal
.github/workflows/: build-with-ubuntu.yaml
app/: Chef.hs  JustOneAttribute.hs  Main.hs  P11RunnerHs.hs  ReadTestDevice.hs  Tango.hsc  TangoHL.hs  WebAstor.hs
app/OldStuff/: AmarcordRunBridge.hs  Chef.hs  FreeTest.hs  JustOneAttribute.hs  P11States.hs
app/P11Runner/: CollimatorState.hs  DetectorTowerState.hs  Main.hs  Markdown.hs  Util.hs
app/Tango/: Common.hsc  Server.hsc
c_tango/: CMakeLists.txt  Cargo.toml  build.rs  ctango.pc.in  testprogram.cpp
c_tango/src/: c_tango.h  c_tango_attribute.cpp  c_tango_command.cpp  c_tango_dbase.cpp  c_tango_proxy.cpp  c_tango_server.cpp
lib/: AmarcordApi.hs  TangoHL.hs
lib/AmarcordApi/: Common.hs  Configuration.hs  SecuritySchemes.hs  TypeAlias.hs  Types.hs
lib/AmarcordApi/Operations/: ChangeCurrentRunExperimentTypeApiExperimentTypesChangeForRunPost.hs  CheckStandardUnitApiUnitPost.hs  CreateAttributiFromSchemaApiAttributiSchemaPost.hs  CreateAttributoApiAttributiPost.hs  CreateBeamtimeApiBeamtimesPost.hs  CreateChemicalApiChemicalsPost.hs  CreateDataSetApiDataSetsPost.hs  CreateDataSetFromRunApiDataSetsFromRunPost.hs  CreateEventApiEventsPost.hs  CreateExperimentTypeApiExperimentTypesPost.hs  CreateFileApiFilesPost.hs  CreateFileSimpleApiFilesSimpleExtensionPost.hs  CreateLiveStreamSnapshotApiLiveStreamSnapshotBeamtimeIdGet.hs  CreateOrUpdateRunApiRunsRunExternalIdPost.hs  CreateRefinementResultApiRefinementResultsPost.hs  DeleteAttributoApiAttributiDelete.hs  DeleteChemicalApiChemicalsDelete.hs  DeleteDataSetApiDataSetsDelete.hs  DeleteEventApiEventsDelete.hs  DeleteExperimentTypeApiExperimentTypesDelete.hs  DeleteFileApiFilesDelete.hs  GetBeamtimeScheduleApiScheduleBeamtimeIdGet.hs  IndexingJobUpdateApiIndexingIndexingResultIdPost.hs  MergeJobFinishedApiMergingMergeResultIdPost.hs  ReadAnalysisResultsApiAnalysisAnalysisResultsBeamtimeIdGet.hs  ReadAttributiApiAttributiBeamtimeIdGet.hs  ReadBeamtimeApiBeamtimesBeamtimeIdGet.hs  ReadBeamtimesApiBeamtimesGet.hs  ReadChemicalsApiChemicalsBeamtimeIdGet.hs  ReadDataSetsApiDataSetsBeamtimeIdGet.hs  ReadEventsApiEventsBeamtimeIdGet.hs  ReadExperimentTypesApiExperimentTypesBeamtimeIdGet.hs  ReadRunAnalysisApiRunAnalysisBeamtimeIdGet.hs  ReadRunsApiRunsBeamtimeIdGet.hs  ReadRunsBulkApiRunsBulkPost.hs  ReadUserConfigurationSingleApiUserConfigBeamtimeId_KeyGet.hs  StartMergeJobForDataSetApiMergingDataSetIdStartPost.hs  StartRunApiRunsRunExternalIdStartBeamtimeIdGet.hs  StopLatestRunApiRunsStopLatestBeamtimeIdGet.hs  UpdateAttributoApiAttributiPatch.hs  (+7 more)
lib/AmarcordApi/Types/: AssociatedTable.hs  AssociatedTable.hs-boot  ChemicalType.hs  ChemicalType.hs-boot  HTTPValidationError.hs  HTTPValidationError.hs-boot  JSONSchemaArray.hs  JSONSchemaArray.hs-boot  JSONSchemaArrayType.hs  JSONSchemaArrayType.hs-boot  JSONSchemaBoolean.hs  JSONSchemaBoolean.hs-boot  JSONSchemaInteger.hs  JSONSchemaInteger.hs-boot  JSONSchemaNumber.hs  JSONSchemaNumber.hs-boot  JSONSchemaString.hs  JSONSchemaString.hs-boot  JsonAnalysisDataSet.hs  JsonAnalysisDataSet.hs-boot  JsonAnalysisExperimentType.hs  JsonAnalysisExperimentType.hs-boot  JsonAnalysisRun.hs  JsonAnalysisRun.hs-boot  JsonAttributiIdAndRole.hs  JsonAttributiIdAndRole.hs-boot  JsonAttributo.hs  JsonAttributo.hs-boot  JsonAttributoBulkValue.hs  JsonAttributoBulkValue.hs-boot  JsonAttributoValue.hs  JsonAttributoValue.hs-boot  JsonBeamtime.hs  JsonBeamtime.hs-boot  JsonBeamtimeOutput.hs  JsonBeamtimeOutput.hs-boot  JsonBeamtimeSchedule.hs  JsonBeamtimeSchedule.hs-boot  JsonBeamtimeScheduleOutput.hs  JsonBeamtimeScheduleOutput.hs-boot  (+200 more)
lib/Tango/: Client.hs  Common.hsc
lib/Tango/Raw/: Common.hsc
test-in-cpp/: main.cpp
