cabal-version:      3.6
name:               hs-tango
version:            1.0.0
synopsis:           Bindings to the Tango Controls system
-- description:
homepage: https://github.com/pmiddend/hs-tango

license:            GPL-3.0-or-later
license-file:       LICENSE
author:             DESY
maintainer:         philipp.middendorf@desy.de
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    Changelog

common warnings
    ghc-options: -Wall -Wno-unused-imports

library
    import:            warnings
    exposed-modules:   Tango.Raw.Common
                     , Tango.Client
    build-depends:     base
                     , text
                     , derive-storable
                     , unliftio
                     , time
                     , aeson
                     , bifunctors
                     , lens
                     , free
                     , transformers
                     , containers
                     , mtl
    hs-source-dirs:    lib
    ghc-options:       -threaded -rtsopts
    -- include-dirs: c_tango/src
    hsc2hs-options:    -k --define=CABAL_BINDGEN=1
    pkgconfig-depends: ctango
    default-language:  Haskell2010

benchmark tango-read-test-device
  type: exitcode-stdio-1.0
  main-is: ReadTestDevice.hs
  
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:
      app
  build-depends:
      base >=4.7 && <5
    , hs-tango
           
