cabal-version:      3.6
name:               hs-tango
version:            1.0.0
synopsis:           Bindings to the Tango Controls system
description:
  Haskell bindings for Tango, part of the Tango Distributed Control System toolkit. Some general notes about this project:

  * There are raw C bindings inside the @Tango.Raw@ package. You shouldn't have to use these, but they might be a fallback if you need something very specific.
  * C types are mapped to sized Haskell types. For example, an attribute of type "Short" will be mapped to the @Int16@ type. The names of the value constructors will be called ...Short, still, to have some symmetry with the Tango user interfaces.
homepage: https://github.com/pmiddend/hs-tango

license:            GPL-3.0-or-later
license-file:       LICENSE
author:             DESY
maintainer:         philipp.middendorf@desy.de
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    Changelog

common warnings
    ghc-options: -Wall -Wno-unused-imports

library
    import:            warnings
    exposed-modules:   Tango.Raw.Common
                     , Tango.Client
    build-depends:     base
                     , text
                     , derive-storable
                     , unliftio
                     , time
                     , aeson
                     , bifunctors
                     , lens
                     , free
                     , transformers
                     , containers
                     , mtl
    hs-source-dirs:    lib
    ghc-options:       -threaded -rtsopts
    -- include-dirs: c_tango/src
    hsc2hs-options:    -k --define=CABAL_BINDGEN=1
    pkgconfig-depends: ctango
    default-language:  Haskell2010

benchmark tango-read-test-device
  type: exitcode-stdio-1.0
  main-is: ReadTestDevice.hs
  
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:
      app
  build-depends:
      base >=4.7 && <5
    , hs-tango
    , text
           
