cabal-version:      3.6
name:               tango-hs
version:            1.0.0
-- synopsis:
-- description:
homepage:
    https://gitlab.desy.de/cfel-sc-public/tango-hs

license:            GPL-3.0-or-later
license-file:       LICENSE
author:             CFEL-SC
maintainer:         sc@cfel.de
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable tango-hs-testprogram
    import:           warnings
    main-is:          Main.hs
    other-modules: Tango
    build-depends:    base
                    , vector
                    , text
    hs-source-dirs:   app
    -- include-dirs: c_tango/src
    hsc2hs-options: --cc g++ --lflag=-lstdc++ -k -DCABAL_BINDGEN=1
    pkgconfig-depends: ctango
    default-language: Haskell2010
