cabal-version:      3.6
name:               tango-hs
version:            1.0.0
-- synopsis:
-- description:
homepage:
    https://gitlab.desy.de/cfel-sc-public/tango-hs

license:            GPL-3.0-or-later
license-file:       LICENSE
author:             CFEL-SC
maintainer:         sc@cfel.de
-- copyright:
category:           Text
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wno-unused-imports

library
    import:            warnings
    exposed-modules:   Tango.Common
                     , Tango.Server
                     , TangoHL
    build-depends:     base
                     , text
                     , derive-storable
                     , unliftio
                     , time
                     , aeson
                     , bifunctors
                     , lens
                     , free
                     , transformers
                     , containers
                     , mtl
    hs-source-dirs:    lib
    ghc-options:       -threaded -rtsopts
    -- include-dirs: c_tango/src
    hsc2hs-options:    -k --define=CABAL_BINDGEN=1
    pkgconfig-depends: ctango
    default-language:  Haskell2010

    

executable P11RunnerHs
    import:            warnings
    main-is:           P11Runner/Main.hs
    build-depends:     base
                     , text
                     , derive-storable
                     , unliftio
                     , time
                     , aeson
                     , bifunctors
                     , lens
                     , free
                     , transformers
                     , tango-hs
                     , containers
                     , mtl
    hs-source-dirs:    app
    ghc-options:       -threaded -rtsopts
    default-language:  Haskell2010

