[package]
name = "tango-client-sys"
version = "0.1.5"
authors = ["Georg Brandl <g.brandl@fz-juelich.de>", "Jens Meyer <jens.meyer@esrf.fr>"]
description = "C bindings for a client to the Tango control system."
license = "LGPL-3.0+"
edition = "2018"
repository = "https://gitlab.com/tango-controls/tango-rs"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
